--- a/demo/app/src/main/res/values/base-strings.xml
+++ b/demo/app/src/main/res/values/base-strings.xml
@@ -3,5 +3,6 @@
     <string name="app_name">odembed</string>
     <string name="app_name_classifier">cassifier</string>
     <string name="app_name_detector">detector</string>
+    <string name="app_name_face">face recognition</string>
 
 </resources>
