--- a/demo/app/src/main/res/layout-land/fragment_camera.xml
+++ b/demo/app/src/main/res/layout-land/fragment_camera.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.example.odembed.AutoFitTextureView
+    <com.example.odembed.ui.AutoFitTextureView
         android:id="@+id/texture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -11,7 +11,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true" />
 
-    <com.example.odembed.BoxView
+    <com.example.odembed.ui.BoxView
         android:id="@+id/boxview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
